fix jquery mobile footer jump issue & add group detail page

--- a/ws-rails/app/assets/stylesheets/themes/default/app.scss
+++ b/ws-rails/app/assets/stylesheets/themes/default/app.scss
@@ -18,7 +18,7 @@
     .footer-navbar .ui-btn-inner{padding-top:20px;}
     .footer-navbar .ui-icon{top:4px;}
     .footer-navbar .ui-btn-text{top:6px;}
-    .my-orders-content,.edit-my-orders-content,.my-Group-content{display: none;}
+    .my-orders-content,.my-group-content{display: none;}
     .edit-restaurant-details li{padding: 0px 15px; font-size: 12px;}
 } 
 
